--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "gsap": "^3.6.1",
+    "node-sass": "^4.14.1",
+    "nuxt": "^2.15.3",
+    "sass-loader": "^10.1.0"
   },
   "devDependencies": {}
 }
