--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "gsap": "^3.6.1",
     "node-sass": "^4.14.1",
     "nuxt": "^2.15.3",
-    "sass-loader": "^10.1.0"
+    "sass-loader": "^10.1.0",
+    "scrollmagic": "^2.0.8",
+    "scrollmagic-plugin-gsap": "^1.0.4",
+    "vue-scrollmagic": "^1.2.0"
   },
   "devDependencies": {}
 }
